feat(admin-api): add job events endpoint & command
